# ec-iowa-corn

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/ec_iowa/: __init__.py  casma.py  cli.py  config.py  gdd_stage.py  nass.py  noaa.py  usdm.py  workbook.py  yield_model.py
tests/: test_config.py
web/: app.py  data.json  snapshot.py
