[project]
name = "ec-iowa"
version = "0.1.0"
description = "EC Iowa District 60 corn progress data pipeline and yield forecast"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "requests>=2.31",
    "pandas>=2.2",
    "scipy>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
web = [
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.scripts]
ec-iowa = "ec_iowa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ec_iowa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
